# securechain-copilot-concept

./: .gitignore  README.md  flake.nix  pyproject.toml
src/: agent.py  data_pipeline.py  main.py  test_query.py  vector_store.py
